    one revision should not generate a system error.  Reported by shar.
  * Make the parser's infinite loop detection more robust.
  * Fix an issue that caused non-link signatures ("my sig") to display tildes
    instead of the signature text.
  * When importing Mediawiki XML the Special:Import tool should trim author
    names longer than 100 characters to conform to JAMWiki database limits.

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


0.9.5
=====

Bugfixes:

  * Fix a potential XSS attack, and make the XSS detection code more
    aggressive.  Reported by bawolff.
  * Headings of seven or more levels caused generation of invalid HTML.
    Reported by an anonymous user.
  * Fix a transaction-related issue that could cause XML imports to hang on
    some databases including MS SQL Server.
  * Fix an issue that could cause topic history to display incorrectly with
    MS SQL Server.
  * Update the default footer page's copyright notice to 2011.


0.9.4
=====

Bugfixes:

  * The SERVERNAME magic word was previously implemented incorrectly and has
    been fixed to return only the server URL ("www.example.com") without an
    "http://" prefix. Reported by an anonymous user.
  * Several pages including the Special:History page could generated errors on
    Apache 7.0.x due to an invalid JSTL naming convention used with import
    revisions. Reported by anonymous users.


0.9.3
=====

New Features:

  * Convert parser limits for maximum transclusions, template depth and parser
    iterations to property values to allow more control for sites that need it.

Bugfixes:

  * Fix a potential infinite loop with nested template includes. Inclusions
    are now limited to a maximum of 250 per page.
  * Setting the default file upload properties could cause initialization
    failures in cases where JAMWiki was deployed without the JAMWiki WAR, such